added new use case to append items to inventory, only description and type are asked

--- a/client/app/views/items.html
+++ b/client/app/views/items.html
@@ -1,7 +1,8 @@
 <div layout="column" ng-cloak>
-  <md-toolbar class="md-warn">
+  <md-toolbar class="md-primary">
     <div class="md-toolbar-tools">
-      <h2 class="md-flex">Atomtory: an inventory for atoms and isotopes</h2>
+      <h2 flex class="md-flex">Atomtory: an inventory for atoms and isotopes</h2>
+      <md-button class="md-secondary" ng-click="items.create()">Add new Item</md-button>
     </div>
   </md-toolbar>
   <md-content flex layout-padding>
