--- a/client/app/views/items.html
+++ b/client/app/views/items.html
@@ -8,7 +8,7 @@
   <md-content flex layout-padding>
     <md-list>
       <md-subheader class="md-no-sticky">{{items.list.length}} items on inventory</md-subheader>
-      <md-list-item class="md-3-line secondary-button-padding" ng-repeat="item in items.list">
+      <md-list-item class="fade md-3-line secondary-button-padding" ng-repeat="item in items.list">
         <div class="md-list-item-text" layout="column">
           <h3>{{item.label}}</h3>
           <h3 ng-if="item.type">{{item.type.label}}</h3>
