added search dialog to filter invetory

--- a/client/app/views/items.html
+++ b/client/app/views/items.html
@@ -6,9 +6,16 @@
     </div>
   </md-toolbar>
   <md-content flex layout-padding>
+    <section layout="row">
+      <md-input-container class="md-block" flex-gt-xs>
+        <label>Search</label>
+        <input required md-maxlength="50" ng-model="searchTerm">
+      </md-input-container>   
+    </section>
     <md-list>
       <md-subheader class="md-no-sticky">{{items.list.length}} items on inventory</md-subheader>
-      <md-list-item class="fade md-3-line secondary-button-padding" ng-repeat="item in items.list">
+      <md-list-item class="fade md-3-line secondary-button-padding" 
+        ng-repeat="item in items.list | filter:{ label: searchTerm } ">
         <div class="md-list-item-text" layout="column">
           <h3>{{item.label}}</h3>
           <h3 ng-if="item.type">{{item.type.label}}</h3>
